# DNS-over-TLS-server

./: .gitignore  .yamllint  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/dns_over_tls_server/: __init__.py  cli.py  resolvers.py  server.py  ssock.py
tests/: __init__.py  test_resolvers.py  test_server.py
